--- a/chat-app/package.json
+++ b/chat-app/package.json
@@ -4,13 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    
     "start": "node src/index.js",
-    "dev" : "nodemon src/index.js"
+    "dev": "nodemon src/index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bad-words": "^3.0.4",
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
     "socket.io": "^4.5.2"
